# ProcessVision

./: Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
src/: lib.rs
src/cli/: main.rs
src/core/: errors.rs  findings.rs  memory_map.rs  mod.rs  process_enum.rs  process_handle.rs  scanner.rs
src/engines/: hooks.rs  memory_region.rs  mod.rs  pe_analysis.rs  shellcode.rs  threads.rs
src/utils/: mod.rs
tests/: core_tests.rs  mock_tests.rs
