[package]
name = "processvision"
version = "0.1.0"
edition = "2021"
authors = ["Ismail Tasdelen"]
description = "Advanced Process Memory Threat Detection Tool"

[dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_Security",
    "Win32_System_LibraryLoader",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_System_SystemInformation"
] }
clap = { version = "4.4", features = ["derive"] }
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.0"
goblin = "0.7"
entropy = "0.4"
log = "0.4"
env_logger = "0.10"

[lib]
name = "processvision"
path = "src/lib.rs"

[[bin]]
name = "processvision"
path = "src/cli/main.rs"
